<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wilson</string>
    <string name="app_external_media_subdir">USCKI media</string>
    <string name="app_general_action_confirm">Bevestigen</string>
    <string name="app_general_action_cancel">Annuleren</string>
    <string name="app_general_action_share">Delen</string>
    <string name="app_general_action_save">Opslaan</string>
    <string name="app_general_action_share_intent_text">Delen met…</string>
    <string name="main_menu_news">News</string>
    <string name="main_menu_agenda">Agenda</string>
    <string name="main_menu_shoutbox">Roephoek</string>
    <string name="main_menu_poll">Poll</string>
    <string name="main_menu_quotes">Quotes</string>
    <string name="main_menu_meeting_planner">Vergaderplanner</string>
    <string name="main_menu_smobo">Smoelenboek</string>
    <string name="home_fragment_tab_header_news">Nieuws</string>
    <string name="home_fragment_tab_header_agenda">Agenda</string>
    <string name="home_fragment_tab_header_shoutbox">Roephoek</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_preferences">Voorkeuren</string>
    <string name="action_close">Sluiten</string>
    <string name="action_roephoek_roep">Roep</string>
    <string name="action_agenda_subscribe">Deelnemen</string>
    <string name="action_agenda_unsubscribe">Uitschrijven</string>
    <string name="action_meeting_save">Opslaan in agenda</string>
    <string name="prompt_username">Gebruikersnaam</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Inloggen</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_username">Deze gebruikersnaam is neit geldig</string>
    <string name="error_incorrect_password">Dit wachtwoord is niet geldig</string>
    <string name="error_field_required">Dit veld is verplicht</string>
    <string name="login_request">nl.uscki.appcki.android.LOGIN_REQUEST</string>
    <string name="logout">Uitloggen</string>
    <string name="login">Inloggen</string>
    <string name="notloggedin">Je bent niet ingelogd.</string>
    <string name="noaccess">Je hebt geen toegang tot deze content.</string>
    <string name="agenda_subscribe_bad_request_error">Er is iets fout gegaan met je inschrijving. Open dit evenement in de app, en probeer het vanuit daar nogmaals.</string>
    <string name="content_loading_error">Er ging iets fout bij het laden van de content.</string>
    <string name="unknown_server_error">Er is een onbekende fout opgetreden op de server. Probeer het later nog eens.</string>
    <string name="error_user_not_found">Deze gebruiker kon niet worden gevonden.</string>
    <string name="error_login_failed">Inloggen mislukt.</string>
    <string name="agenda_inschrijven">Inschrijven</string>
    <string name="agenda_uitschrijven">Uitschrijven</string>
    <string name="tab_agenda_details">Details</string>
    <string name="tab_agenda_participants">Deelnemers</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_no_results">We konden niemand vinden.</string>
    <string name="news_no_new_news">Er is geen nieuws meer.</string>
    <string name="roephoek_dialog_name_hint">Naam</string>
    <string name="roephoek_dialog_content_hint">Bericht</string>
    <string name="roephoek_dialog_ok">Voeg toe!</string>
    <string name="roephoek_dialog_cancel">Annuleren</string>
    <string name="roephoek_no_new_shouts">Er zijn geen roepen meer.</string>
    <string name="agenda_dialog_note_hint">Notitie</string>
    <string name="agenda_dialog_question_hint">Antwoord op inschrijfvraag (verplicht)</string>
    <string name="agenda_dialog_ok">Inschrijven</string>
    <string name="agenda_dialog_cancel">Annuleren</string>
    <string name="agenda_no_new_agendas">Er zijn geen evenementen meer.</string>
    <string name="agenda_toast_added_to_calendar">Evenement is toegevoegd aan agenda</string>
    <string name="agenda_toast_removed_from_calendar">Evenement is verwijderd uit agenda</string>
    <string name="agenda_subscribe_confirmed">Je bent ingeschreven voor deze activiteit</string>
    <string name="agenda_subscribe_changed">Je inschrijving is gewijzigd</string>
    <string name="agenda_unsubscribe_confirmed">Je bent uitgeschreven voor deze activiteit</string>
    <string name="agenda_subscribe_failed">Er ging iets fout. Je inschrijving is niet behandelt!</string>
    <string name="agenda_unsubscribe_failed">Er ging iets fout. Je bent nog steeds ingeschreven!</string>
    <string name="agenda_subscribe_backuplist">Het maximum aantal inschrijvingen is al behaald. Je bent op de wachtlijst geplaatst. Als er uitschrijvingen zijn heb je kans alsnog ingeschreven te worden.</string>
    <string name="agenda_item_n_registrations">%d</string>
    <string name="agenda_item_n_registrations_max">%d (max %d)</string>
    <string name="agenda_item_n_registration_plus_backup">%d + %d (max %d)</string>
    <string name="agenda_inschrijven_verplicht">Inschrijven verplicht</string>
    <string name="agenda_registration_required_before">Inschrijving verplicht vóór %s</string>
    <string name="agenda_registration_required_passed">Inschrijfdeadline was %s</string>
    <string name="agenda_n_participants">%d deelnemers</string>
    <string name="agenda_n_participants_max">%d van maximaal %d inschrijvingen</string>
    <string name="agenda_n_participants_backup">%d van maximaal %d inschrijvingen (%d op wachtlijst)</string>
    <string name="agenda_archive_menu_string">Archief</string>
    <string name="vote_imperative">Stemmen</string>
    <string name="action_agenda_export">Opslaan</string>
    <string name="action_agenda_remove_from_calendar">Verwijderen uit agenda</string>
    <string name="agenda_n_comments_singular">%d reactie</string>
    <string name="agenda_n_comments_plural">%d reacties</string>
    <string name="agenda_participants_backup_list">Wachtlijst</string>
    <string name="agenda_participants_backup_list_help">Als er een maximum aantal inschrijvingen geldt voor een evenement en dat aantal inschrijvingen is al gehaald, word je op de wachtlijst geplaatst als jij je ook inschrijft. Wanneer bestaande deelnemers zich uitschrijven, heb je kans van de wachtlijst naar de deelnemerslijst te worden geplaatst. Dit gebeurt in volgorde van inschrijving voor alle wachtenden.</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nee</string>
    <string name="comment_delete_header">Reactie verwijderen</string>
    <string name="comment_delete_message">Weet je zeker dat je je reactie wil verwijderen?</string>
    <string name="comment_delete_success">Reactie verwijderd</string>
    <string name="pref_header_export_options">Exporteren</string>
    <string name="pref_header_export_options_summary">Integratie met systeemapplicaties instellen</string>
    <string name="pref_cat_events">Agenda</string>
    <string name="pref_save_in_calendar">Integreer met agenda</string>
    <string name="pref_save_in_calendar_summary">Door deze optie te selecteren kun je evenementen opslaan in je agenda zonder de Wilson app te verlaten</string>
    <string name="pref_calendar_to_use">Te gebruiken kalender</string>
    <string name="pref_calendar_export_auto">Automatiseer evenementen</string>
    <string name="pref_calendar_export_auto_summary">Voeg evenementen waarvoor je je inschrijft automatisch toe aan je agenda</string>
    <string name="pref_meetingplanner_export_auto">Automatiseer vergaderplanners</string>
    <string name="pref_meetingplanner_export_auto_summary">Voeg geplande vergaderingen automatisch toe aan je agenda</string>
    <string name="pref_header_notifications">Notificaties</string>
    <string name="pref_cat_people">Contacten</string>
    <string name="pref_contacts_store_fullname">Volledige naam</string>
    <string name="pref_contacts_store_fullname_summary">Als deze optie aan staat wordt het contact automatisch opgeslagen onder de volledige naam. Anders wordt alleen de voornaam gebruikt.</string>
    <string name="pref_contacts_store_nickname">Nickname</string>
    <string name="pref_contacts_store_organisation">Organisatie</string>
    <string name="pref_contacts_store_organisation_summary">Zet U.S.C.K.I Incognito automatisch als organisatie</string>
    <string name="pref_custom_vibrate">Laat Wilson trillen</string>
    <string name="pref_custom_vibrate_summary">Kies je eigen trilpatroon. Deze instelling wordt genegeerd als in de Android instellingen trillen voor Wilson notificaties wordt ingeschakeld</string>
    <string name="pref_title_vibration_pattern">Trilpatroon</string>
    <string name="pref_system_notification_settings">Systeeminstellingen</string>
    <string name="pref_system_notification_settings_summary">Beheer notificatieinstellingen voor de applicatie in de opties van Android</string>
    <string name="vibration_pattern_default">@string/vibration_pattern_long_twice</string>
    <string name="quote_sort_title">Sorteren</string>
    <string name="quote_sort_option_time_desc">Nieuwste eerst</string>
    <string name="quote_sort_option_time_asc">Oudste eerst</string>
    <string name="quote_sort_option_toonkans_desc">Hoogste toonkans</string>
    <string name="quote_sort_option_toonkans_asc">Laagste toonkans</string>
    <string name="quote_sort_option_positives_votes_desc">Meeste positief</string>
    <string name="quote_sort_option_negative_votes_asc">Minste negatief</string>
    <string name="privacy_policy_header">Privacy policy</string>
    <string name="privacy_policy_agree_terms_general_summary">
        Algemene voorwaarden (vereist)
    </string>
    <string name="privacy_policy_action_show">Toon privacy policy en wijzig persoonlijk akkoord</string>
    <string name="privacy_policy_action_show_summary">Akkoord met sommige voorwaarden is vereist voor
        het gebruik van deze app. Bij het intrekken van toestemming kan u uitgelogd worden,
        waarna deze app zal sluiten</string>
    <string name="privacy_policy_status">Status</string>
    <string name="shop_header">Shop</string>
    <string name="wilson_media_activity_header">Media</string>
    <string name="wilson_media_caption_contest_menu_confirm_vote_checkbox_label">Vraag stembevestiging</string>
    <string name="wilson_media_forum_header">Forum</string>
    <string name="wilson_media_forum_locked_desc">Unlocked eerst</string>
    <string name="wilson_media_forum_locked_asc">Locked eerst</string>
    <string name="wilson_media_forum_views_desc">Meeste views</string>
    <string name="wilson_media_forum_views_asc">Minste views</string>
    <string name="wilson_media_forum_new_post_content_hint">Bericht</string>
    <string name="wilson_bb_code_markup_header_1">h1</string>
    <string name="wilson_bb_code_markup_header_2">h2</string>
    <string name="wilson_bb_code_markup_header_3">h3</string>
    <string name="wilson_bb_code_markup_bold"><b>B</b></string>
    <string name="wilson_bb_code_markup_italic"><i>I</i></string>
    <string name="wilson_bb_code_markup_underline"><u>U</u></string>
    <string name="wilson_bb_code_markup_strikethrough"><strike>S</strike></string>
    <string name="wilson_bb_code_markup_quote">Quote</string>
    <string name="wilson_bb_code_markup_link">Link</string>
    <string name="wilson_bb_code_markup_code">Code</string>
    <string name="wilson_bb_code_markup_spoiler">spoiler</string>
    <string name="wilson_bb_code_markup_image">Afbeelding</string>
    <string name="wilson_bb_code_markup_email">Email</string>
    <string name="wilson_bb_code_markup_list">Lijst</string>
    <string name="wilson_bb_code_markup_superscript">Superscript</string>
    <string name="wilson_bb_code_markup_subscript">Subscript</string>
</resources>