<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory
        android:title="@string/pref_cat_events"
        >
        <SwitchPreference
            android:defaultValue="false"
            android:key="calendar_use_export"
            android:title="@string/pref_save_in_calendar"
            android:summary="@string/pref_save_in_calendar_summary"
            />

        <ListPreference
            android:dependency="calendar_use_export"
            android:key="calendar_selected_id"
            android:title="@string/pref_calendar_to_use"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="event_export_auto"
            android:title="@string/pref_calendar_export_auto"
            android:summary="@string/pref_calendar_export_auto_summary"
            android:dependency="calendar_use_export"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="meeting_export_auto"
            android:title="@string/pref_meetingplanner_export_auto"
            android:summary="@string/pref_meetingplanner_export_auto_summary"
            android:dependency="calendar_use_export"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_people"
        >
        <SwitchPreference
            android:defaultValue="true"
            android:key="people_export_field_fullname"
            android:title="@string/pref_contacts_store_fullname"
            android:summary="@string/pref_contacts_store_fullname_summary"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="people_export_nickname"
            android:title="@string/pref_contacts_store_nickname"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="people_export_field_organisation"
            android:title="@string/pref_contacts_store_organisation"
            android:summary="@string/pref_contacts_store_organisation_summary"
            />

    </PreferenceCategory>
</PreferenceScreen>
