<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/newspaper"
            android:title="@string/main_menu_news" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/outline_calendar_today_24"
            android:title="@string/main_menu_agenda" />
        <item
            android:id="@+id/nav_roephoek"
            android:icon="@drawable/message_text"
            android:title="@string/main_menu_shoutbox" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/wilson_media_forum_header"
            />
        <item
            android:id="@+id/nav_poll"
            android:icon="@drawable/format_list_bulleted"
            android:title="@string/main_menu_poll"
            />
        <item
            android:id="@+id/nav_quotes"
            android:icon="@drawable/format_quote_close"
            android:title="@string/main_menu_quotes"
            />
        <item android:id="@+id/nav_media"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/wilson_media_activity_header"
            />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/cash_multiple"
            android:title="@string/shop_header"
            />
        <item
            android:id="@+id/nav_meeting"
            android:icon="@drawable/outline_event_24"
            android:title="@string/main_menu_meeting_planner"
            />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/baseline_person_search_24"
            android:title="@string/main_menu_smobo"
            />
    </group>

</menu>
