<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_agenda_subscribe"
        android:title="@string/action_agenda_subscribe"
        android:icon="@drawable/plus"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_agenda_unsubscribe"
        android:title="@string/action_agenda_unsubscribe"
        android:icon="@drawable/close"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_agenda_archive"
        android:title="@string/agenda_archive_menu_string"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>