<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="nl.uscki.appcki.android.activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="nl.uscki.appcki.android.activities.SettingsActivity$exportOptionsPreferenceFragment"
        android:icon="@drawable/account"
        android:title="@string/pref_header_export_options"
        android:summary="@string/pref_header_export_options_summary"
        />

    <header
        android:fragment="nl.uscki.appcki.android.activities.SettingsActivity$PrivacyPolicyPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/privacy_policy_header" />

</preference-headers>
